tests/samples/negative/visibility/private_reexport_const.ax
module private_reexport_const;

import samplelib.reexport_facade as facade;

fn main() -> i32 {
    return facade.hidden_base;
}
